--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "datejs": "^1.0.0-rc3",
     "react": "^17.0.1",
     "react-calendar": "^3.2.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
